--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -13,4 +13,58 @@ a {
 
 * {
   box-sizing: border-box;
+} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  body {
+    font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, Segoe UI,
+      Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+      sans-serif;
+
+    background-color: var(--black40);
+    color: white;
+  }
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+  }
+}
+@layer components {
+  .card {
+    background-color: theme("colors.white");
+    border-radius: theme("borderRadius.lg");
+    padding: theme("spacing.6");
+    box-shadow: theme("boxShadow.xl");
+  }
+}
+:root {
+  --black: rgb(0, 0, 0);
+  --black10: #181818;
+  --black20: rgba(0, 0, 0, 0.6);
+  --black30: rgb(17, 24, 39);
+  --black40: #141414;
+  --black50: rgb(20, 20, 20);
+
+  --gray10: rgb(119, 119, 119);
+  --gray20: rgb(156, 163, 175);
+  --gray40: rgba(42, 42, 42, 0.6);
+
+  --white10: rgba(255, 255, 255, 1);
+  --white20: rgba(243, 244, 246, 1);
+  --white30: rgb(209, 213, 219);
+
+  --green10: rgba(110, 231, 183, 1);
+  --shadow10: rgba(0, 0, 0, 0.3);
+  --shadow20: rgba(158, 155, 155, 0.3);
+  --shadow30: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+
+  --red: rgb(220, 38, 38);
+  --red10: rgba(185, 28, 28, 1);
+
+  --blue: rgba(75, 85, 99, 1);
+  --blue20: rgb(55, 65, 81);
 }
